--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "flatpickr": "^4.6.3",
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.8.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "select2": "^4.0.13"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
