--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "4.2.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "4.3.1",
+    "csvtojson": "^2.0.10",
     "flatpickr": "^4.6.3",
-    "jquery": "^3.5.0",
-    "mapbox-gl": "^1.8.1",
+    "jquery": "^3.5.1",
+    "mapbox-gl": "^1.11.0",
+    "ml-knn": "^3.0.0",
     "popper.js": "^1.16.1",
+    "prompt": "^1.0.0",
     "select2": "^4.0.13"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   }
 }
