--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mapbox-gl": "^1.11.0",
     "ml-knn": "^3.0.0",
     "popper.js": "^1.16.1",
+    "postgresql": "^0.0.1",
     "prompt": "^1.0.0",
     "select2": "^4.0.13"
   },
